<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".maps.MapsActivity">





    <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <RelativeLayout

            android:background="@color/back"
            android:layout_width="match_parent" android:layout_height="50dp">


        <TextView
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:textSize="20sp"
                android:layout_toLeftOf="@id/tv_pol"
                android:layout_toStartOf="@id/tv_pol"
                android:layout_centerVertical="true"
                android:id="@+id/tv_work"
                android:text="@string/worker"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>


        <TextView
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:textSize="20sp"

                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_hos"
                android:layout_toStartOf="@id/tv_hos"
                android:id="@+id/tv_pol"
                android:text="@string/police"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>



        <TextView
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:padding="12dp"
                android:id="@+id/tv_hos"
                android:textSize="20sp"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/hospital"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>




    </RelativeLayout>

</RelativeLayout>