<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/back"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <EditText
                android:layout_margin="30dp"
                android:id="@+id/in_email_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/in_back"
                android:hint="@string/enter_your_email_id_mobile_number"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"/>


        <RelativeLayout
                android:id="@+id/rl_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp">

            <EditText
                    android:paddingRight="50dp"
                    android:paddingEnd="50dp"
                    android:id="@+id/in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/in_back"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:singleLine="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"/>


            <!--<ImageView-->
            <!--android:id="@+id/img_pass"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:background="?attr/selectableItemBackground"-->
            <!--android:clickable="true"-->
            <!--android:padding="16dp"-->
            <!--android:tint="@android:color/darker_gray"-->
            <!--app:srcCompat="@drawable/ic_visibility_off" />-->

        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/rl_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

            <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password_did_you"/>

            <TextView
                    android:id="@+id/txt_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/tv_forgot_password"
                    android:text="@string/r_it"
                    android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center">

            <View
                    android:id="@+id/view_one"
                    android:layout_width="70dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/text_dark"

            />

            <TextView

                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/view_one"
                    android:background="@drawable/or_background"
                    android:padding="6dp"
                    android:text="@string/or"
                    android:textSize="12sp"/>

            <View
                    android:id="@+id/view_two"
                    android:layout_width="70dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/tv_or"
                    android:background="@color/text_dark"/>


        </RelativeLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">


            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1">

                <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/btn_facebook_sigin"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginLeft="8dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--android:layout_marginRight="8dp"-->
                <!--facebook:confirm_logout="false"-->
                <!--facebook:fetch_user_info="true"-->
                <!--facebook:login_text=""-->
                <!--facebook:logout_text="" />-->


                <ImageView
                        android:id="@+id/tv_radio_setting_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/facebook_shape"
                        android:gravity="center"
                        android:padding="10dp"
                        android:paddingStart="-180dp"
                        android:paddingLeft="-120dp"/>


                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="50dp"
                        app:srcCompat="@drawable/ic_facebook_logo"
                        android:tint="@android:color/white"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/register_with_facebook"
                        android:textColor="@android:color/white"/>
            </FrameLayout>

            <RelativeLayout
                    android:id="@+id/rl_google"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/in_back"
                    android:clickable="true"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/img_google"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        app:srcCompat="@drawable/ic_google"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@id/img_google"
                        android:text="@string/register_with_google"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


    <include
            android:layout_alignParentBottom="true"
            android:id="@+id/bottom_frame"
            layout="@layout/bottom_bar_ssconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="-20dp"/>


</RelativeLayout>


